k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    apps: movie-analyst-api 
  name: movie-analyst-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-analyst-api
      component: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: movie-analyst-api
        component: backend
    spec:
      containers:
      - name: movie-analyst-api
        image: sagudeloo/movie-analyst-api:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
