k8s/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    apps: movie-analyst-ui 
  name: movie-analyst-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie-analyst-ui
      component: frontend
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: movie-analyst-ui
        component: frontend
    spec:
      containers:
      - name: movie-analyst-ui
        image: sgilz/rampup-ui:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 3030
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
