k8s/api-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: api-cluster-ip
  name: movie-api-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
  - port: 3000
    targetPort: 3000
