k8s/ui-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: movie-ui-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
  - port: 3030
    targetPort: 3030
